k8s_deployments/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rotten-potatoes-web
  namespace: rotten-potatoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rotten-potatoes-web
  template:
    metadata:
      labels:
        app: rotten-potatoes-web
      annotations:
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/8080/TCP/HTTP>"
    spec:
      containers:
        - name: rotten-potatoes-web
          image: paulofponciano/rotten-potatoes-web:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rotten-potatoes-web
  namespace: rotten-potatoes
  annotations:
    service.cilium.io/lb-l7: enabled
    service.cilium.io/lb-l7-algorithm: round_robin
spec:
  selector:
    app: rotten-potatoes-web
  ports:
    - name: http
      port: 80
      targetPort: http
