k8s_deployments/fast-api-o11y.yaml
##################################################################################################
# Namespace
##################################################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: sample-api
  # labels:
  #   istio-injection: enabled
---
##################################################################################################
# App-A
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: sample-api
  labels:
    app: app-a
    service: app-a
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    service.cilium.io/lb-l7: enabled
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: app-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: sample-api
  labels:
    app: app-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
      labels:
        app: app-a
        version: v1
    spec:
      containers:
      - name: app-a
        image: paulofponciano/o11y-lab-prom-otel-loki-tempo:sample-api
        imagePullPolicy: 'Always'
        ports:
        - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a
  namespace: sample-api
spec:
  ingressClassName: cilium
  rules:
  - host: app-a.pauloponciano.digital
    http:
      paths:
      - backend:
          service:
            name: app-a
            port:
              number: 8000
        path: /
        pathType: Prefix
