k8s_deployments/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: rotten-potatoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.2-alpine
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: rotten-potatoes
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-back-to-db
  namespace: rotten-potatoes
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: rotten-potatoes-api
  - toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
